--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,7 @@ jobs:
     - name: Build the Docker image
       run: 
         docker build . --file Dockerfile --tag harbor.service.com:32429/library/go-file-generator:$(date +%s)
+    - name: Push the Docker image
+      run: 
         docker push harbor.service.com:32429/library/go-file-generator:$(date +%s) 
+        
