--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: docker/login-action@v1
+      with:
+        registry: harbor.service.com:32429
+        username: ${{ secrets.REGISTRY_USERBANE  }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: 
